--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,14 @@
         "symfony/config": "^5.3",
         "symfony/yaml": "^5.3",
         "symfony/http-kernel": "^5.3",
-        "thecodingmachine/safe": "^1.3"
+        "thecodingmachine/safe": "^1.3",
+        "nikic/php-parser": "^4.13",
+        "rector/rector": "^0.12.8",
+        "sebastian/diff": "^4.0"
     },
     "require-dev": {
         "infection/infection": "^0.25.3",
         "phpunit/phpunit": "^9.5",
-        "vimeo/psalm": "^4.10",
         "psalm/plugin-symfony": "^3.0"
     },
     "scripts": {
