--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "infection/infection": "^0.25.3",
         "psalm/plugin-symfony": "^3.0",
         "symfony/phpunit-bridge": "^6.0",
-        "vimeo/psalm": "^4.18"
+        "vimeo/psalm": "^4.18",
+        "phpunit/phpunit": "^9.5"
     },
     "scripts": {
         "psalm": "psalm -c build/config/psalm.xml --show-info=true",
@@ -47,5 +48,10 @@
             "@test",
             "@infection-after-phpunit"
         ]
+    },
+    "config": {
+        "allow-plugins": {
+            "infection/extension-installer": true
+        }
     }
 }
