--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "symfony/http-kernel": "^5.3",
         "thecodingmachine/safe": "^1.3",
         "nikic/php-parser": "^4.13",
-        "rector/rector": "^0.12.8"
+        "rector/rector": "^0.12.8",
+        "roave/security-advisories": "dev-latest"
     },
     "require-dev": {
         "infection/infection": "^0.25.3",
