--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "symfony/http-kernel": "^5.3",
         "thecodingmachine/safe": "^1.3",
         "nikic/php-parser": "^4.13",
-        "rector/rector": "^0.12.8"
+        "rector/rector": "^0.12.8",
+        "roave/security-advisories": "dev-latest"
     },
     "require-dev": {
         "infection/infection": "^0.25.3",
@@ -38,7 +39,7 @@
     "scripts": {
         "psalm": "psalm -c build/config/psalm.xml --show-info=true",
         "phpunit": "simple-phpunit -c build/config/phpunit.xml",
-        "infection": "infection --only-covered --configuration=build/config/infection.json --min-msi=100 --min-covered-msi=100 --coverage=../coverage --threads=4 --test-framework-options='--no-coverage'",
+        "infection": "infection --only-covered --configuration=build/config/infection.json --min-msi=88 --min-covered-msi=88 --coverage=../coverage --threads=4 --test-framework-options='--no-coverage'",
         "infection-after-phpunit": "@infection --skip-initial-tests",
         "test": [
             "@psalm",
