--- a/composer.json
+++ b/composer.json
@@ -26,15 +26,15 @@
         "symfony/http-kernel": "^6.0",
         "thecodingmachine/safe": "^2.1",
         "nikic/php-parser": "^4.13",
-        "rector/rector": "^0.12.8",
-        "roave/security-advisories": "dev-latest"
+        "rector/rector": "^0.12.8"
     },
     "require-dev": {
         "infection/infection": "^0.26",
         "psalm/plugin-symfony": "^3.0",
         "symfony/phpunit-bridge": "^6.0",
         "vimeo/psalm": "^4.18",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "roave/security-advisories": "dev-latest"
     },
     "scripts": {
         "psalm": "psalm -c build/config/psalm.xml --show-info=true",
